src/test/ui/shadowed/shadowed-use-visibility.stderr
error[E0603]: module import `bar` is private
  --> $DIR/shadowed-use-visibility.rs:9:14
   |
LL |     use foo::bar::f as g;
   |              ^^^ this module import is private
   |
note: the module import `bar` is defined here
  --> $DIR/shadowed-use-visibility.rs:4:9
   |
LL |     use foo as bar;
   |         ^^^^^^^^^^

error[E0603]: module import `f` is private
  --> $DIR/shadowed-use-visibility.rs:15:10
   |
LL | use bar::f::f;
   |          ^ this module import is private
   |
note: the module import `f` is defined here
  --> $DIR/shadowed-use-visibility.rs:11:9
   |
LL |     use foo as f;
   |         ^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
